--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:ijWDw9CAliFpiw7YnnQYDrrD8FFuD0isyuy8Ie0Y0rw=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://localhostiqbal
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
